--- a/css/style.css
+++ b/css/style.css
@@ -277,6 +277,7 @@ header {
 
 .pricing-list__item {
   flex-basis: calc((100% - 60px) / 3);
+  flex-basis: calc((100% - 2 * 30px) / 3);
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
