--- a/css/style.css
+++ b/css/style.css
@@ -416,3 +416,101 @@ header {
 .social-list__link:focus {
   background-color: #06b7d2;
 } */
+
+/* modal */
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.8);
+  width: 100%;
+  height: 100%;
+  transition: opacity 250ms linear, visibility 250ms linear;
+}
+
+.backdrop.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1);
+  max-width: 500px;
+  width: 100%;
+  min-height: 550px;
+  background-color: #fff;
+  transition: 250ms transform linear;
+}
+
+.backdrop.is-hidden > .modal {
+  transform: translate(-50%, -50%) scale(0.6);
+}
+
+.modal-btn {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+}
+
+.test-list-item {
+  max-width: 500px;
+  width: 100%;
+  border: 1px solid #000;
+}
+
+.content {
+  border: 1px solid red;
+  padding: 15px;
+}
+
+.wrapper {
+  position: relative;
+  overflow: hidden;
+}
+
+.test-list-link {
+  display: block;
+}
+
+.test-list-link:hover .overlay,
+.test-list-link:focus .overlay {
+  transform: translateY(0);
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: translateY(100%);
+  width: 100%;
+  height: 100%;
+  background-color: #3c0adf;
+  transition: transform 250ms linear;
+}
+
+.menu-link {
+  padding: 20px 0;
+}
+
+.menu-link:hover.current::after {
+}
+
+.current {
+  position: relative;
+  color: blue;
+}
+
+.current::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 4px;
+  background-color: #950000;
+  border-radius: 2px;
+}
