--- a/css/style.css
+++ b/css/style.css
@@ -93,6 +93,14 @@ header {
   margin-right: auto;
 }
 
+.menu-link {
+  transition: color 500ms linear;
+}
+
+.menu-link:hover {
+  color: blue;
+}
+
 .header-wrapper {
   display: flex;
   align-items: center;
@@ -598,4 +606,26 @@ header {
 .modal-checkbox-input:checked + .modal-checkbox-label > .modal-checkbox-custom {
   color: black;
   background-color: #00ddff;
+}
+
+.footer-form {
+  display: flex;
+}
+
+.footer-form-btn {
+  background-color: #e20c0c;
+  border: none;
+  border-radius: 10px;
+  padding: 20px;
+  min-width: 200px;
+}
+
+.footer-form-input {
+  border-radius: 10px;
+  margin-right: 15px;
+}
+
+.submit-icon {
+  margin-right: 10px;
+  vertical-align: middle;
 }
