--- a/css/style.css
+++ b/css/style.css
@@ -51,14 +51,39 @@ button {
 body {
   font-family: "Poppins", sans-serif;
   color: var(--main-color);
-  font-size: 20px;
+  font-size: 14px;
   line-height: calc(54 / 36);
 }
 
+@media only screen and (min-width: 768px) {
+  body {
+    font-size: 16px;
+  }
+}
+
+@media only screen and (min-width: 1378px) {
+  body {
+    font-size: 20px;
+  }
+}
+
 .container {
-  max-width: 1378px;
-  padding: 0 20px;
+  max-width: 480px;
+  padding: 0 15px;
   margin: 0 auto;
+}
+
+@media only screen and (min-width: 768px) {
+  .container {
+    max-width: 690px;
+  }
+}
+
+@media only screen and (min-width: 1378px) {
+  .container {
+    max-width: 1338px;
+    padding: 0 20px;
+  }
 }
 
 .title {
@@ -106,6 +131,10 @@ header {
   align-items: center;
 }
 
+.header-nav {
+  display: none;
+}
+
 .header-menu {
   display: flex;
   margin-right: 131px;
@@ -131,46 +160,132 @@ header {
   border-radius: 10px;
   letter-spacing: 0.03em;
   color: var(--title-color);
+  display: none;
 }
 
+@media only screen and (min-width: 1378px) {
+  .header-button,
+  .header-nav {
+    display: block;
+  }
+}
 /* Hero */
-
 .hero {
-  padding-top: 101px;
-  padding-bottom: 134px;
+  padding-top: 29px;
+  padding-bottom: 53px;
 }
 
-.hero-wrappper {
-  display: flex;
-  align-items: flex-start;
-  justify-content: space-between;
+@media only screen and (min-width: 768px) {
+  .hero-wrappper {
+    display: flex;
+    align-items: flex-end;
+    flex-direction: row-reverse;
+    gap: 22px;
+  }
+}
+
+@media only screen and (min-width: 1378px) {
+  .hero-wrappper {
+    align-items: flex-start;
+    justify-content: space-between;
+    gap: 0;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .hero-img {
+    margin: 0 auto;
+    margin-bottom: 16px;
+  }
 }
 
 .hero-content {
-  max-width: 540px;
+  text-align: center;
 }
+
+@media only screen and (min-width: 768px) {
+  .hero-content {
+    max-width: 338px;
+    text-align: left;
+  }
+}
+
+@media only screen and (min-width: 1378px) {
+  .hero-content {
+    max-width: 540px;
+    align-items: flex-start;
+    justify-content: space-between;
+  }
+}
+
 .hero-title {
   font-weight: 600;
-  font-size: 64px;
-  line-height: calc(80 / 64);
+  font-size: 24px;
   color: var(--title-color);
-  margin-bottom: 57px;
+  margin-bottom: 18px;
+}
+
+@media only screen and (min-width: 768px) {
+  .hero-title {
+    max-width: 326px;
+    line-height: 1.25;
+    font-size: 36px;
+    margin-bottom: 20px;
+  }
+}
+
+@media only screen and (min-width: 1378px) {
+  .hero-title {
+    font-size: 64px;
+    margin-bottom: 57px;
+  }
 }
 
 .hero-text {
-  font-size: 24px;
-  margin-bottom: 43px;
+  margin-bottom: 33px;
+}
+
+@media only screen and (min-width: 768px) {
+  .hero-text {
+    font-size: 16px;
+    margin-bottom: 32px;
+  }
+}
+
+@media only screen and (min-width: 1378px) {
+  .hero-text {
+    font-size: 24px;
+    margin-bottom: 43px;
+  }
 }
 
 .hero-btn {
-  min-width: 426px;
-  font-size: 36px;
+  min-width: 289px;
+  font-size: 16px;
   letter-spacing: 0.03em;
+  font-weight: 500;
   color: var(--white-color);
   background-color: var(--bg-button);
-  padding: 22px 63px;
+  padding: 17px 5px;
   border: 1px solid #000000;
-  border-radius: 10px;
+  border-radius: 5px;
+}
+
+@media only screen and (min-width: 768px) {
+  .hero-btn {
+    min-width: 236px;
+    font-size: 18px;
+    padding: 18px 5px;
+  }
+}
+
+@media only screen and (min-width: 1378px) {
+  .hero-btn {
+    min-width: 426px;
+    font-size: 36px;
+    padding: 22px 63px;
+    border-radius: 10px;
+  }
 }
 
 /* Skills */
@@ -186,14 +301,26 @@ header {
 
 .title {
   font-weight: 600;
-  font-size: 48px;
+  font-size: 24px;
+  line-height: calc(80 / 24);
   color: var(--title-color);
 }
 
+@media only screen and (min-width: 768px) {
+  .title {
+    font-size: 30px;
+    line-height: calc(80 / 30);
+  }
+}
+
+@media only screen and (min-width: 1378px) {
+  .title {
+    font-size: 48px;
+    line-height: calc(75 / 48);
+  }
+}
+
 .skills-list {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 30px;
 }
 
 .skills-list__item {
@@ -209,8 +336,6 @@ header {
 .skills-list__item:last-child {
   grid-column-start: 2;
   grid-column-end: 4;
-  display: flex;
-  flex-direction: row-reverse;
 }
 
 .skills-list__img {
@@ -223,9 +348,9 @@ header {
 
 .skills-list__title {
   font-weight: 600;
-  font-size: 30px;
+  font-size: 18px;
+  line-height: calc(80 / 18);
   color: var(--bg-button);
-  margin-bottom: 20px;
 }
 
 .skills-list__text {
@@ -237,10 +362,51 @@ header {
   font-weight: 500;
   color: var(--white-color);
   background-color: var(--bg-button);
-  padding: 15px 52px;
-  padding-right: 51px;
-  border-radius: 10px;
-  min-width: 218px;
+  padding: 14px 43px;
+  border-radius: 5px;
+  min-width: 178px;
+}
+
+@media only screen and (min-width: 768px) {
+  .skills-list {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 30px;
+  }
+  .skills-list__title {
+    font-size: 20px;
+    line-height: calc(80 / 20);
+  }
+
+  .skills-list__btn {
+    font-size: 16px;
+  }
+
+  .skills-list__item:last-child {
+    display: flex;
+    flex-direction: row-reverse;
+  }
+}
+
+@media only screen and (min-width: 1378px) {
+  .skills-list {
+    font-size: 24px;
+    margin-bottom: 43px;
+  }
+}
+
+@media only screen and (max-width: 1378px) {
+  .skills-list__text {
+    font-size: 13px;
+    line-height: calc(20 / 13);
+    margin-bottom: 43px;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .skills-list__item:not(:last-child) {
+    margin-bottom: 21px;
+  }
 }
 
 /* About */
@@ -303,7 +469,6 @@ header {
 
 .pricing-list__item {
   flex-basis: calc((100% - 60px) / 3);
-  flex-basis: calc((100% - 2 * 30px) / 3);
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -628,4 +793,44 @@ header {
 .submit-icon {
   margin-right: 10px;
   vertical-align: middle;
+}
+
+/* mobile-menu */
+
+.mobile-menu {
+  position: fixed;
+  transform: translateX(-100%);
+  padding: 40px;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: rgb(0, 0, 0);
+  transition: transform 250ms linear, opacity 250ms linear,
+    visibility 250ms linear;
+  color: #fff;
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  overflow: auto;
+}
+
+.mobile-menu.is-open {
+  transform: translateX(0);
+  opacity: 1;
+  visibility: visible;
+  pointer-events: initial;
+}
+
+.mobile-menu-close {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+}
+
+.modal-wrapper {
+  font-size: 30px;
 }
